--- a/Source/CriticalPath.Web/CriticalPath.Web.csproj
+++ b/Source/CriticalPath.Web/CriticalPath.Web.csproj
@@ -271,6 +271,8 @@
     <Content Include="Content\Default\bootstrap.min.css" />
     <Content Include="Content\Default\darker.css" />
     <Content Include="Content\fileupload.css" />
+    <Content Include="Content\font-awesome.css" />
+    <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\NavbarColors-Blue.css" />
     <Content Include="Content\Cosmo\bootstrap.min.css" />
     <Content Include="Content\Darkly\bootstrap.min.css" />
@@ -360,6 +362,7 @@
     <Content Include="fav\mstile-310x310.png" />
     <Content Include="fav\mstile-70x70.png" />
     <Content Include="fav\safari-pinned-tab.svg" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -440,9 +443,16 @@
     <Content Include="Areas\Admin\Views\EmployeePositions\Index.cshtml" />
     <Content Include="Scripts\App\fileUpload.js" />
     <Content Include="libs\jquery.fileupload.js" />
-    <None Include="Scripts\jquery-2.2.2.intellisense.js" />
-    <Content Include="Scripts\jquery-2.2.2.js" />
-    <Content Include="Scripts\jquery-2.2.2.min.js" />
+    <Content Include="fonts\FontAwesome.otf" />
+    <Content Include="fonts\fontawesome-webfont.woff2" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\font-awesome.css.map" />
+    <None Include="Scripts\jquery-2.2.3.intellisense.js" />
+    <Content Include="Scripts\jquery-2.2.3.js" />
+    <Content Include="Scripts\jquery-2.2.3.min.js" />
+    <Content Include="Scripts\jquery-2.2.3.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
@@ -459,7 +469,6 @@
     <Content Include="fav\manifest.json" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Scripts\jquery-2.2.2.min.map" />
     <Content Include="Scripts\jquery-ui-1.11.4.js" />
     <Content Include="Scripts\jquery-ui-1.11.4.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -639,6 +648,9 @@
     <Content Include="Views\PurchaseOrders\_Details.cshtml" />
     <Content Include="Views\PurchaseOrders\_Edit.cshtml" />
     <Content Include="Views\POShipments\_Index.cshtml" />
+    <Content Include="Views\Contacts\_Create.cshtml" />
+    <Content Include="Views\Contacts\_Details.cshtml" />
+    <Content Include="Views\Contacts\_Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Files\" />
