--- a/Source/CriticalPath.Web/packages.config
+++ b/Source/CriticalPath.Web/packages.config
@@ -4,8 +4,9 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
   <package id="bootstrap" version="3.0.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="FontAwesomeToolkit" version="4.6.2" targetFramework="net461" />
   <package id="ImageResizer" version="4.0.5" targetFramework="net46" />
-  <package id="jQuery" version="2.2.2" targetFramework="net46" />
+  <package id="jQuery" version="2.2.3" targetFramework="net461" />
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.15.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
