--- a/Source/CriticalPath.Web/CriticalPath.Web.csproj
+++ b/Source/CriticalPath.Web/CriticalPath.Web.csproj
@@ -436,17 +436,56 @@
     <Content Include="Areas\Admin\Views\Employees\Index.cshtml" />
     <Content Include="libs\html2canvas\html2canvas.js" />
     <Content Include="libs\html2canvas\html2canvas.min.js" />
+    <Content Include="libs\JavaScript-Canvas-to-Blob\js\canvas-to-blob.js" />
+    <Content Include="libs\JavaScript-Canvas-to-Blob\js\canvas-to-blob.min.js" />
+    <Content Include="libs\JavaScript-Load-Image\js\demo.js" />
+    <Content Include="libs\JavaScript-Load-Image\js\load-image-exif-map.js" />
+    <Content Include="libs\JavaScript-Load-Image\js\load-image-exif.js" />
+    <Content Include="libs\JavaScript-Load-Image\js\load-image-meta.js" />
+    <Content Include="libs\JavaScript-Load-Image\js\load-image-orientation.js" />
+    <Content Include="libs\JavaScript-Load-Image\js\load-image.all.min.js" />
+    <Content Include="libs\JavaScript-Load-Image\js\load-image.js" />
+    <Content Include="libs\JavaScript-Load-Image\js\vendor\jquery.Jcrop.js" />
+    <Content Include="libs\JavaScript-Load-Image\js\vendor\jquery.js" />
+    <Content Include="libs\jQuery-File-Upload\css\demo-ie8.css" />
+    <Content Include="libs\jQuery-File-Upload\css\demo.css" />
+    <Content Include="libs\jQuery-File-Upload\css\jquery.fileupload-noscript.css" />
+    <Content Include="libs\jQuery-File-Upload\css\jquery.fileupload-ui-noscript.css" />
+    <Content Include="libs\jQuery-File-Upload\css\jquery.fileupload-ui.css" />
+    <Content Include="libs\jQuery-File-Upload\css\jquery.fileupload.css" />
+    <Content Include="libs\jQuery-File-Upload\css\style.css" />
+    <Content Include="libs\jQuery-File-Upload\js\app.js" />
+    <Content Include="libs\jQuery-File-Upload\js\cors\jquery.postmessage-transport.js" />
+    <Content Include="libs\jQuery-File-Upload\js\cors\jquery.xdr-transport.js" />
+    <Content Include="libs\jQuery-File-Upload\js\jquery.fileupload-angular.js" />
+    <Content Include="libs\jQuery-File-Upload\js\jquery.fileupload-audio.js" />
+    <Content Include="libs\jQuery-File-Upload\js\jquery.fileupload-image.js" />
+    <Content Include="libs\jQuery-File-Upload\js\jquery.fileupload-image.min.js">
+      <DependentUpon>jquery.fileupload-image.js</DependentUpon>
+    </Content>
+    <Content Include="libs\jQuery-File-Upload\js\jquery.fileupload-jquery-ui.js" />
+    <Content Include="libs\jQuery-File-Upload\js\jquery.fileupload-process.js" />
+    <Content Include="libs\jQuery-File-Upload\js\jquery.fileupload-process.min.js">
+      <DependentUpon>jquery.fileupload-process.js</DependentUpon>
+    </Content>
+    <Content Include="libs\jQuery-File-Upload\js\jquery.fileupload-ui.js" />
+    <Content Include="libs\jQuery-File-Upload\js\jquery.fileupload-validate.js" />
+    <Content Include="libs\jQuery-File-Upload\js\jquery.fileupload-validate.min.js">
+      <DependentUpon>jquery.fileupload-validate.js</DependentUpon>
+    </Content>
+    <Content Include="libs\jQuery-File-Upload\js\jquery.fileupload-video.js" />
+    <Content Include="libs\jQuery-File-Upload\js\jquery.fileupload.js" />
+    <Content Include="libs\jQuery-File-Upload\js\jquery.fileupload.min.js">
+      <DependentUpon>jquery.fileupload.js</DependentUpon>
+    </Content>
+    <Content Include="libs\jQuery-File-Upload\js\jquery.iframe-transport.js" />
+    <Content Include="libs\jQuery-File-Upload\js\main.js" />
+    <Content Include="libs\jQuery-File-Upload\js\vendor\jquery.ui.widget.js" />
     <Content Include="libs\jsPDF\jspdf.min.js" />
-    <Content Include="Scripts\angular-mocks.js" />
-    <Content Include="Scripts\angular.js" />
-    <Content Include="Scripts\angular.min.js" />
-    <Content Include="Scripts\angular.min.js.map" />
     <Content Include="Areas\Admin\Views\EmployeePositions\Create.cshtml" />
     <Content Include="Areas\Admin\Views\EmployeePositions\Details.cshtml" />
     <Content Include="Areas\Admin\Views\EmployeePositions\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\EmployeePositions\Index.cshtml" />
-    <Content Include="Scripts\App\fileUpload.js" />
-    <Content Include="libs\jquery.fileupload.js" />
     <Content Include="fonts\FontAwesome.otf" />
     <Content Include="fonts\fontawesome-webfont.woff2" />
     <Content Include="fonts\fontawesome-webfont.woff" />
@@ -454,6 +493,9 @@
     <Content Include="fonts\fontawesome-webfont.eot" />
     <Content Include="Content\font-awesome.css.map" />
     <Content Include="Areas\Admin\Views\Employees\ResetPassword.cshtml" />
+    <Content Include="libs\JavaScript-Load-Image\js\load-image.all.min.js.map" />
+    <Content Include="libs\JavaScript-Canvas-to-Blob\js\canvas-to-blob.min.js.map" />
+    <None Include="bundleconfig.json" />
     <None Include="Scripts\jquery-2.2.3.intellisense.js" />
     <Content Include="Scripts\jquery-2.2.3.js" />
     <Content Include="Scripts\jquery-2.2.3.min.js" />
